Add endpoint to calculate error of samples
