# api/controllers/location.js
@@ -7,6 +7,7 @@ const Sample = mongoose.model('Sample')
 const DEFAULT_RSSI = 0
 const K1 = 10
 const K2 = 10
+const MIN_SAMPLES_FOR_POSITION = 3
 
 module.exports = {
   getLocation: async (req, res) => {
@@ -35,16 +36,65 @@ module.exports = {
         return res.status(404)
       }
       const filteredSampleId = req.params.sampleId
-      const filteredSampleIndex = samples.findIndex(sample => sample._id.equals(filteredSampleId))
-      if (filteredSampleIndex === -1) {
-        return res.status(404).send('Sample not found')
+      const location = calculateLocationFilteringSample(samples, filteredSampleId)
+      if (location === -1) {
+        res.status(404).send('Sample not found')
+      } else {
+        res.json(location)
       }
-      const filteredSample = samples.splice(filteredSampleIndex, 1)[0]
-      res.json(calculateLocation(samples, filteredSample.fingerprint))
+    } catch (err) {
+      res.status(400).json(err)
+    }
+  },
+
+  getLocationError: async (req, res) => {
+    const query = Sample.find({})
+    query.lean()
+    try {
+      const samples = await query.exec()
+      if (samples === null) {
+        return res.status(404)
+      }
+      var distances = {}
+      samples.forEach((sample) => {
+        const filteredSampleId = sample._id
+        const location = calculateLocationFilteringSample(samples, filteredSampleId)
+        distances[filteredSampleId] = getDistanceFromLatLonInKm(location.latitude, location.longitude, sample.latitude, sample.longitude) * 1000
+      })
+      const errorMean = Object.values(distances).reduce((acc, current) => { return acc + current }, 0) / Object.values(distances).length
+      const meanSquaredError = Object.values(distances).reduce((acc, current) => { return acc + current * current }, 0) / Object.values(distances).length
+      const result = { 'distances': distances, 'errorMean': errorMean, 'quadraticErrorMean': meanSquaredError }
+      res.json(result)
     } catch (err) {
       res.status(400).json(err)
     }
   }
+}
+
+function getDistanceFromLatLonInKm (lat1, lon1, lat2, lon2) { // https://stackoverflow.com/questions/27928/calculate-distance-between-two-latitude-longitude-points-haversine-formula
+  var R = 6371 // Radius of the earth in km
+  var dLat = deg2rad(lat2 - lat1) // deg2rad below
+  var dLon = deg2rad(lon2 - lon1)
+  var a =
+    Math.sin(dLat / 2) * Math.sin(dLat / 2) +
+    Math.cos(deg2rad(lat1)) * Math.cos(deg2rad(lat2)) *
+    Math.sin(dLon / 2) * Math.sin(dLon / 2)
+  var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a))
+  var d = R * c // Distance in km
+  return d
+}
+
+function deg2rad (deg) {
+  return deg * (Math.PI / 180)
+}
+
+function calculateLocationFilteringSample (samples, filteredSampleId) {
+  const filteredSampleIndex = samples.findIndex(sample => sample._id.equals(filteredSampleId))
+  if (filteredSampleIndex === -1) {
+    return -1
+  }
+  const filteredSample = samples.splice(filteredSampleIndex, 1)[0]
+  return calculateLocation(samples, filteredSample.fingerprint)
 }
 
 function calculateLocation (samples, locationFingerprint) {
@@ -83,7 +133,7 @@ function calculateLocation (samples, locationFingerprint) {
   let R2 = R1.filter(sample => mainFingerprintSortedSSIDsByRSSI.slice(0, 3).includes(sample.sortedIdsByRSSI[0]))
   // Step 3: TODO we are not doing this so we take it as if #(R'') is always big enough
   // If #(R’’) < n, then R’’ = R’, where #(.) denotes the cardinality of a set, and n is a parameter.
-
+  if (R2.length <= MIN_SAMPLES_FOR_POSITION) R2 = R1
   // Step 4: Compute the similarity, the Manhattan distance, between the fingerprint given and all the fingerprints in R’’.
   R2.forEach(sample => { sample.similarity = manhattanDistance(sample.fingerprint, locationFingerprint) })
   // Step 5: Take the k1 samples in R’’ that are the most similar to fp0. (The ones with the smaller similarity, TODO check this)
